--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   cloud_firestore: ^5.6.0
   syncfusion_flutter_calendar: ^28.1.35
   intl: ^0.19.0
+  path_provider: ^2.1.5
+  hive: ^2.2.3
+  build_runner: ^2.4.13
+  hive_generator: ^2.0.1
 
 dev_dependencies:
   flutter_test:
