--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,12 @@ dependencies:
   hive: ^2.2.3
   build_runner: ^2.4.13
   hive_generator: ^2.0.1
+  flutter_svg: ^2.0.16
+  firebase_auth: ^5.3.4
+  google_sign_in: ^6.2.2
+  awesome_notifications: ^0.10.0
+  android_alarm_manager_plus: ^4.0.5
+  fl_chart: ^0.69.2
 
 dev_dependencies:
   flutter_test:
@@ -71,9 +77,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/svgs/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
