--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   awesome_notifications: ^0.10.0
   android_alarm_manager_plus: ^4.0.5
   fl_chart: ^0.69.2
+  mockito: ^5.4.4
 
 dev_dependencies:
   flutter_test:
